--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^5.0.1",
     "devicon": "^2.11.0",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-skeleton-loader": "^2.9.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
