--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run ainga-portfolio-v2:serve-ssr",
+    "serve:ssr": "node dist/ainga-portfolio-v2/server/main.js",
+    "build:ssr": "ng build --prod && ng run ainga-portfolio-v2:server:production",
+    "prerender": "ng run ainga-portfolio-v2:prerender"
   },
   "private": true,
   "dependencies": {
@@ -19,11 +23,14 @@
     "@angular/localize": "~11.2.3",
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
+    "@angular/platform-server": "~11.2.3",
     "@angular/router": "~11.2.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.1",
+    "@nguniversal/express-engine": "^11.2.1",
     "angular-responsive-carousel": "^2.0.2",
     "bootstrap": "^5.0.1",
     "devicon": "^2.11.0",
+    "express": "^4.15.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-perfect-scrollbar": "^10.1.1",
@@ -37,6 +44,8 @@
     "@angular-devkit/build-angular": "~0.1102.2",
     "@angular/cli": "~11.2.2",
     "@angular/compiler-cli": "~11.2.3",
+    "@nguniversal/builders": "^11.2.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
