--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,7 +11,8 @@
     "dev:ssr": "ng run ainga-portfolio-v2:serve-ssr",
     "serve:ssr": "node dist/ainga-portfolio-v2/server/main.js",
     "build:ssr": "ng build --prod && ng run ainga-portfolio-v2:server:production",
-    "prerender": "ng run ainga-portfolio-v2:prerender"
+    "prerender": "ng run ainga-portfolio-v2:prerender",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -38,7 +39,10 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "@angular/cli": "~11.2.2",
+    "@angular/compiler-cli": "~11.2.3",
+    "typescript": "~4.1.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.2",
@@ -60,5 +64,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
+  },
+  "engines": {
+    "node": "12.18.1",
+    "npm": "6.14.5"
   }
 }
